# resources/views/admin/product/product_index.blade.php
@@ -30,6 +30,20 @@
             <div class="container-fluid">
                 <!--begin::Row-->
                 <a href="{{ route('product.create') }}" class="btn btn-primary">Add More</a>
+                <form class="mt-2" method="get" action="{{ route('ServicesSearch') }}">
+                    @csrf
+                    <div class="row mb-4">
+                        <div class="col-md-4">
+                            <label for="service_name">Service Name:</label>
+                            <input type="text" class="form-control" id="service_name" name="service_name" placeholder="Service Name">
+                        </div>
+                        
+                        <div class="col-md-1">
+                            <input type="hidden" name="user_token" value="{{ Auth::user()->user_token }}">
+                            <button type="submit" class="btn btn-success mt-4">Search</button>
+                        </div>
+                    </div>
+                </form>
                 <div class="card-header">
 
                     <span class="text-success">
