# routes/api.php
@@ -64,4 +64,5 @@ Route::post('/productDelete/{id}','APIController@productDelete')->name('productD
 
 //  For Orders Search
 Route::post('/order-search','APIController@OrderSearch')->name('order-search');
+Route::post('deals-search','APIController@DealsSearch')->name('deals-search');
 
