# storage/api-docs/api-docs.json
@@ -1631,6 +1631,179 @@
                     }
                 }
             }
+        },
+        "/service-redeem": {
+            "post": {
+                "tags": [
+                    "Order Details"
+                ],
+                "summary": "For Service Redeem ",
+                "operationId": "4869a6e0fc39c9dc02bdc665e093ecaa",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "order_id": {
+                                        "type": "string",
+                                        "example": "ORD-66c4697701bed-JQZAn"
+                                    },
+                                    "comments": {
+                                        "type": "string",
+                                        "example": "I Want To Redeem My Service"
+                                    },
+                                    "number_of_session": {
+                                        "type": "flout",
+                                        "example": "1"
+                                    },
+                                    "service_id": {
+                                        "type": "integer",
+                                        "example": "1"
+                                    },
+                                    "user_token": {
+                                        "type": "string",
+                                        "example": "FOREVER-MEDSPA"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Result Found"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/deals-search": {
+            "post": {
+                "tags": [
+                    "Order Details"
+                ],
+                "summary": "For Service Redeem",
+                "operationId": "51b3bec194688d69f434bbf096d0a2fc",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "cat_name",
+                                    "user_token"
+                                ],
+                                "properties": {
+                                    "cat_name": {
+                                        "type": "string",
+                                        "example": "September Deals"
+                                    },
+                                    "user_token": {
+                                        "type": "string",
+                                        "example": "FOREVER-MEDSPA"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Result Found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "result": {
+                                            "type": "array",
+                                            "items": {
+                                                "type": "object"
+                                            }
+                                        },
+                                        "status": {
+                                            "type": "integer",
+                                            "example": 200
+                                        },
+                                        "success": {
+                                            "type": "string",
+                                            "example": "Deals Found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "No deals found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "No deals found"
+                                        },
+                                        "status": {
+                                            "type": "integer",
+                                            "example": 404
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Unauthenticated"
+                                        },
+                                        "status": {
+                                            "type": "integer",
+                                            "example": 401
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Forbidden"
+                                        },
+                                        "status": {
+                                            "type": "integer",
+                                            "example": 403
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
